Trade bootstrap for foundation.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,3 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
+@import "foundation_and_overrides";
 @import "font-awesome-sprockets";
 @import "font-awesome";
