--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12 text-center">
+  <div class="medium-6 medium-offset-3 columns text-center">
     <h1>Welcome to Lambda, assemblers!</h1>
     <p>Made with <%= icon('heart') %> by the Assembly community.</p>
   </div>
