--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lambda: Learn to Code the Fun Way</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <title>Lambda: Master Code the Fun Way</title>
+  <%= stylesheet_link_tag 'application', media: 'all',
+    'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'dataturbolinks-track' => true %>
+  <%= javascript_include_tag "vendor/modernizr" %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" /
 </head>
 <body>
 
