--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,8 @@
+@import "variables";
 @import "foundation_and_overrides";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+@import "mixins";
+@import "custom";
+
