Adding html structure to landing and add primary font with google fonts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,15 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Lambda: Master Code the Fun Way</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <%= stylesheet_link_tag 'application', media: 'all',
     'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'dataturbolinks-track' => true %>
   <%= javascript_include_tag "vendor/modernizr" %>
   <%= csrf_meta_tags %>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" /
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Muli:400,300,400italic">
 </head>
 <body>
 
