--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>Lambda: Master Code the Fun Way</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <%= render 'layouts/favicon' %>
+
   <%= stylesheet_link_tag 'application', media: 'all',
     'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'dataturbolinks-track' => true %>
