--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,6 @@
 
   <%= stylesheet_link_tag 'application', media: 'all',
     'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'dataturbolinks-track' => true %>
   <%= javascript_include_tag "vendor/modernizr" %>
   <%= csrf_meta_tags %>
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Muli:400,300,400italic">
@@ -17,5 +16,7 @@
 
 <%= yield %>
 
+<%= javascript_include_tag 'application', 'dataturbolinks-track' => true %>
+<%= yield :scripts %>
 </body>
 </html>
